# uart-over-midi

./: README.md
example/pico_hub75/: CMakeLists.txt  Makefile.sample.mk  README.md
example/pico_hub75/html/: index.html
example/pico_hub75/include/: hub75_driver.h  pico_hub75.h
example/pico_hub75/src/: hub75.pio  hub75_driver.c  pico_hub75.c
example/pico_uom/: CMakeLists.txt  Makefile.sample.mk
example/pico_uom/include/: pico_uom.h
example/pico_uom/src/: pico_uom.c  usb_descriptors.c
example/uomterm/: Makefile
example/uomterm/html/: index.html
lib/c/include/: uart_over_midi.h
lib/c/src/: uart_over_midi.c
